[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlsf-audio"
version = "0.1.0"
description = "HLSF Audio IR bootstrap: deterministic extractor + plugin-ready IR"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pydantic>=2.6",
  "jsonschema>=4.21",
  "pytest>=8.0"
]

[project.scripts]
hlsf-audio = "hlsf_audio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
